# learn-dbt

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
analyses/: full_moon_no_sleep.sql
macros/: no_nulls_in_columns.sql
models/: overview.md  schema.yml  sources.yml
models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
models/fct/: fct_reviews.sql
models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
snapshots/: sc_raw_listings.sql
tests/: consistent_created_at.sql  dim_listings_minimum_nights.sql  no_nulls_in_dim_listings.sql
