[tool.poetry]
name = "learn-dbt"
version = "0.1.0"
description = ""
authors = ["Lucas Sossai <lucas.sossai2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-snowflake = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
